--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -7,24 +7,22 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>17</height>
-    </rect>
-   </property>
+  <widget class="QWidget" name="CentralWidget">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="1,9" columnstretch="1">
+    <item row="0" column="0">
+     <layout class="QVBoxLayout" name="TitleBarLayout"/>
+    </item>
+    <item row="1" column="0">
+     <layout class="QVBoxLayout" name="ContentsLayout"/>
+    </item>
+   </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
